[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Objects/Barrier.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Black Ops One.theme" type="Theme" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.25, 1.5, 2 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="Animation" id=4]
resource_name = "BarrierHealth.0"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody/CollisionShape:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.125, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -1000.5, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StaticBody/CollisionShape:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -1000.5, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "BarrierHealth.1"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.5, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:mesh:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.25, 1, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StaticBody/CollisionShape:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.5, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBody/CollisionShape:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.125, 0.5, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "BarrierHealth.2"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody/CollisionShape:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.125, 0.75, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody/CollisionShape:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.25, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeshInstance:mesh:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.25, 1.5, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeshInstance:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.25, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody/CollisionShape:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StaticBody/CollisionShape:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.125, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeshInstance:mesh:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.25, 2, 2 ) ]
}

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.125, 0.75, 1 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.1, 1, 1 )

[node name="Barrier" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="ZombieArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape" type="CollisionShape" parent="ZombieArea"]
shape = SubResource( 2 )

[node name="RepairArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape" type="CollisionShape" parent="RepairArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10061, 0, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BarrierHealth.0 = SubResource( 4 )
anims/BarrierHealth.1 = SubResource( 5 )
anims/BarrierHealth.2 = SubResource( 6 )
anims/BarrierHealth.3 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="."]
collision_layer = 5

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
shape = SubResource( 8 )

[node name="StaticBody2" type="StaticBody" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0359069, 0, 0 )
shape = SubResource( 9 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 805.576
margin_top = 443.226
margin_right = 1264.58
margin_bottom = 677.226
theme = ExtResource( 2 )
text = "Press E to Repair"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="ZombieArea" to="." method="_on_ZombieArea_body_entered"]
[connection signal="body_exited" from="ZombieArea" to="." method="_on_ZombieArea_body_exited"]
[connection signal="body_entered" from="RepairArea" to="." method="_on_RepairArea_body_entered"]
[connection signal="body_exited" from="RepairArea" to="." method="_on_RepairArea_body_exited"]
